Fixed max width on mobile
Trying 18 rem instead of 20

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ html[data-theme="dark"] {
     padding: 3rem 2.5rem;
     text-align: center;
     font-weight: 100;
-    max-width: 20rem;
+    max-width: 18rem;
     width: 100%;
 }
 
